tests/sem/pass/struct_access.c
struct fewf {
	int efds;
};

struct fewf fesd;

int main() {
	int a;
	fesd.efds = 2;
	a = fesd.efds;
	return a;
}
