tests/sem/error/assign.c
struct fa{
    int a;
};

void main() {
    int i;
    struct fa s;
    i+2=3;
    4 = 'e';
    (char*) = "cs";
    sizeof(int*) = 3234;
    s.a = main();
}